# cuimp-ts

./: .eslintrc.json  .gitignore  Cargo.toml  LICENSE  PR_DESCRIPTION.md  README.md  RELEASE_NOTES.md  curl_chrome136.bat  index.ts  package-lock.json  package.json  test-bat-fix.js  test-bat-parsing-fix.js  test-bat-parsing.js  test-header-order.js  test_curl_chrome136.bat  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  release.yml
doc/: USAGE.md
examples/: 01-basic-requests.js  02-browser-impersonation.js  03-http-client.js  04-all-methods.js  05-proxy-example.js  06-error-handling.js  07-binary-management.js  08-web-scraping.js  09-advanced-config.js  10-custom-logger.js  11-cookie-management.js  12-4xx-5xx-error.js  13-chrome136-example.js  14-httponly-cookies.js  15-windows-paths-with-spaces.js  16-windows-specific-test.js  17-overwrite-headers-windows.js  18-test-header-order-windows.js  README.md  client.rs  proxy.rs  simple.rs
src/: client.rs  client.ts  connector.rs  constants.rs  cuimp.rs  cuimp.ts  error.rs  index.ts  lib.rs  parser.rs  runner.rs  runner.ts  types.rs  validation.rs
src/constants/: cuimpConstants.ts  httpConstants.ts  requestConstants.ts
src/helpers/: connector.ts  cookieJar.ts  descriptorNormalize.ts  parser.ts
src/types/: cuimpTypes.ts  curlErrors.ts  runTypes.ts
src/validations/: descriptorValidation.ts
test/: README.md  api.test.ts  basic.test.ts  setup.ts
test/integration/: index.test.ts
test/unit/: client.test.ts  connector.test.ts  cookieJar.test.ts  cuimp.test.ts  descriptorNormalize.test.ts  parser.test.ts  (+5 more)
