[package]
name = "cuimp"
version = "0.1.0"
edition = "2021"
authors = ["F4RAN <f4ran@vitalize.dev>"]
description = "Rust wrapper for curl-impersonate - Enhanced browser impersonation for HTTP requests"
license = "MIT"
repository = "https://github.com/F4RAN/cuimp-rs"
keywords = ["curl", "http", "web-scraping", "browser", "impersonation"]
categories = ["web-programming::http-client", "network-programming"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
bytes = "1.5"
url = "2.5"
tar = "0.4"
flate2 = "1.0"
dirs = "5.0"

[dev-dependencies]
tokio-test = "0.4"

[lib]
name = "cuimp"
path = "src/lib.rs"

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "client"
path = "examples/client.rs"

[[example]]
name = "proxy"
path = "examples/proxy.rs"
